# auto-transcribe

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  pyproject.toml
models/: .gitignore  README.md
src/: README  recasepunc.py  transcribe.py
templates/: otr.tpl
test-interviews/: README  interview-drosten-zdf.denoise.wav.srt  interview-drosten-zdf.wav.small-model.srt  interview-drosten-zdf.wav.srt  interview-merkel-dw.wav.srt  pandemie-pressekonferenz-03-22.wav.srt
